--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My-second-repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
      <h1> Hello</h1>
      <h2> Mama I am ready for going home</h2>
-     <h3></h3>
+     <h3>New code change</h3>
+     <h4> I am coding</h4>
 </body>
 </html>
